# fac-tools

./: .gitignore  LICENSE  pyproject.toml  x
src/bot/: bot.py
src/fac_tools/: __init__.py  archive.py  article.py  index.py  nomination.py  revision.py
src/fac_tools/scripts/: fac_summary_bot.py  user_fac_revision_stats.py  wordcount-ideas.ipynb
src/scripts/: fac_summary_bot.py
tests/: conftest.py  test_archive.py  test_article.py  test_index.py  test_nomination.py  test_revision.py
tests/scripts/: test_fac_summary_bot.py
tests/scripts/test_fac_summary_bot/: Chris Redfield@1344829095.html  Tomb of Kha and Merit@1344360978.html
tests/test_archive/Wikipedia:Featured_article_candidates/Crusading_movement/: archive2@1343969032
tests/test_nomination/Wikipedia:Featured article candidates/Crusading movement/archive2/1344125955/: content.txt  revs.json
tests/test_nomination/Wikipedia:Featured article candidates/Horizon Zero Dawn/archive1/1344093782/: revs.json
tests/test_nomination/Wikipedia:Featured article candidates/Nile/archive1/1346716243/: content.txt  revs.json
tests/test_nomination/Wikipedia:Featured article candidates/Serpent labret with articulated tongue/archive1/1344457733/: content.txt  revs.json
tests/test_nomination/Wikipedia:Featured_article_candidates/Horizon_Zero_Dawn/: archive1@1344093782
tests/test_nomination/Wikipedia:Featured_article_candidates/Serpent_labret_with_articulated_tongue/: archive1@1343867890
tests/utils/: get_fac.py
toolforge/: bot.sh  sample-user-config.py  setup-notes.txt
